[gd_scene load_steps=3 format=2]

[ext_resource path="res://graphnode.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 1, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0509804, 0.294118, 0, 1 )
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
shadow_offset = Vector2( 3, 3 )
anti_aliasing = false

[node name="Panel" type="Panel"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 16, 16 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -48.0
margin_top = -32.0
margin_right = 80.0
margin_bottom = -2.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Panel_mouse_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
